--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,9 +23,18 @@ podTemplate(
             df -h
 	    echo 'itsworking'
             """
+	    
+	    def yaml = readYaml file: 'jenkinstest/values.yaml'
+	    sh """
+	    echo $yaml
+	    echo ${yaml}
+	    echo yaml.replicaCount
+            echo $replica
+	    echo ${replica}
+	    """
         }
         stage('Checkout') {
-            container('jnlp') {
+            container('maven') {
                 checkout scm
 		
 	    def yaml = readYaml file: 'jenkinstest/values.yaml'
