--- a/helm/helpline2/templates/ingress.yaml
+++ b/helm/helpline2/templates/ingress.yaml
@@ -1,11 +1,11 @@
 {{- if .Values.ingress.enabled -}}
-{{- $fullName := include "jenkinstest.fullname" . -}}
+{{- $fullName := include "helpline2.fullname" . -}}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-{{ include "jenkinstest.labels" . | indent 4 }}
+{{ include "helpline2.labels" . | indent 4 }}
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
