--- a/helm/helpline2/templates/deployment.yaml
+++ b/helm/helpline2/templates/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "jenkinstest.fullname" . }}
+  name: {{ include "helpline2.fullname" . }}
   labels:
-{{ include "jenkinstest.labels" . | indent 4 }}
+{{ include "helpline2.labels" . | indent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "jenkinstest.name" . }}
+      app.kubernetes.io/name: {{ include "helpline2.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ include "jenkinstest.name" . }}
+        app.kubernetes.io/name: {{ include "helpline2.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
     {{- with .Values.imagePullSecrets }}
