--- a/helm/helpline2/templates/tests/test-connection.yaml
+++ b/helm/helpline2/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "jenkinstest.fullname" . }}-test-connection"
+  name: "{{ include "helpline2.fullname" . }}-test-connection"
   labels:
-{{ include "jenkinstest.labels" . | indent 4 }}
+{{ include "helpline2.labels" . | indent 4 }}
   annotations:
     "helm.sh/hook": test-success
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args:  ['{{ include "jenkinstest.fullname" . }}:{{ .Values.service.port }}']
+      args:  ['{{ include "helpline2.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
