--- a/jenkinsfile
+++ b/jenkinsfile
@@ -90,6 +90,7 @@ podTemplate(
         }
         
         stage('Deploy') {
+            echo env.GIT_TAG_NAME
             if (env.BRANCH_NAME == 'master') {
                 echo 'I only execute on the master branch'
                 echo env.GIT_TAG_NAME
