--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,6 +26,7 @@ podTemplate(
         stage('Checkout') {
             container('jnlp') {
                 checkout scm
+                GIT_TAG = env.GIT_TAG_NAME
             }
         }
 
@@ -91,9 +92,10 @@ podTemplate(
         
         stage('Deploy') {
             echo env.GIT_TAG_NAME
+            echo $GIT_TAG
             if (env.BRANCH_NAME == 'master') {
                 echo 'I only execute on the master branch'
-                echo env.GIT_TAG_NAME
+                
                 
 
             } else if (env.BRANCH_NAME == 'develop'){
