--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,7 +28,7 @@ podTemplate(
                 checkout scm
                 def GIT_TAG = env.GIT_TAG_NAME
                 env.GIT_TAG_NAME
-                echo ${GIT_TAG})
+                echo ${GIT_TAG}
             }
         }
 
