--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,7 +28,7 @@ podTemplate(
                 checkout scm
                 def GIT_TAG = env.GIT_TAG_NAME
                 env.GIT_TAG_NAME
-                echo ${GIT_TAG}
+                sh 'echo ${GIT_TAG}'
             }
         }
 
