--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,7 +27,7 @@ podTemplate(
             container('jnlp') {
                 checkout scm
                 def GIT_TAG = env.GIT_TAG_NAME
-                env.GIT_TAG_NAME
+                echo env.GIT_TAG_NAME
                 sh 'echo ${GIT_TAG}'
             }
         }
