--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,7 +28,11 @@ podTemplate(
                 checkout scm
                 def GIT_TAG = env.GIT_TAG_NAME
                 echo env.GIT_TAG_NAME
+                echo GIT_TAG
                 sh 'echo ${GIT_TAG}'
+                def GIT_TAG = sh(returnStdout: true, script: "git tag --sort version:refname | tail -1").trim()
+
+
             }
         }
 
