--- a/jenkinsfile
+++ b/jenkinsfile
@@ -30,8 +30,8 @@ podTemplate(
                 echo env.GIT_TAG_NAME
                 echo GIT_TAG
                 sh 'echo ${GIT_TAG}'
-                def GIT_TAG = sh(returnStdout: true, script: "git tag --sort version:refname | tail -1").trim()
-
+                def GIT_TAG2 = sh(returnStdout: true, script: "git tag --sort version:refname | tail -1").trim()
+                echo GIT_TAG2
 
             }
         }
