--- a/jenkinsfile
+++ b/jenkinsfile
@@ -36,24 +36,35 @@ podTemplate(
                 echo COMMIT_HEAD_TAG
                 if (env.BRANCH_NAME == 'master') {
                     echo 'Executing on Master'
-                } else if (env.BRANCH_NAME == 'develop'){
-                    echo 'Execute Unit Tests on Develop'
-                    sh 'ruby -v'
-
-                } else if (env.BRANCH_NAME == 'release'){
-                    echo 'Execute Unit on Tag?'
-                    sh 'ruby -v'
-
-                } else if (env.BRANCH_NAME.contains('prod') && COMMIT_HEAD_TAG.contains('prod')){
-                    echo 'This is the "prod" specific tag release.'
-                    
-                }
-                else {
                     echo 'Head Tag:'    
                     echo COMMIT_HEAD_TAG
                     echo 'Env:'
                     echo env.BRANCH_NAME
-                    echo 'This is the fallback of this IF'
+                } else if (env.BRANCH_NAME == 'develop'){
+                    echo 'Execute on Develop'
+                    echo 'Head Tag:'    
+                    echo COMMIT_HEAD_TAG
+                    echo 'Env:'
+                    echo env.BRANCH_NAME
+                } else if (env.BRANCH_NAME == 'release'){
+                    echo 'Execute on Release'
+                    echo 'Head Tag:'    
+                    echo COMMIT_HEAD_TAG
+                    echo 'Env:'
+                    echo env.BRANCH_NAME
+                } else if (env.BRANCH_NAME.contains('prod') && COMMIT_HEAD_TAG.contains('prod')){
+                    echo 'Execute on "prod" specific tag.'
+                    echo 'Head Tag:'    
+                    echo COMMIT_HEAD_TAG
+                    echo 'Env:'
+                    echo env.BRANCH_NAME
+                }
+                else {
+                    echo 'Non Branch or Tag execution.'
+                    echo 'Head Tag:'    
+                    echo COMMIT_HEAD_TAG
+                    echo 'Env:'
+                    echo env.BRANCH_NAME
                 }
                 // try {
                 // def MASTER_TAG = sh(returnStdout: true, script: "git tag -l --points-at=master").trim()
